--- a/src/index.html
+++ b/src/index.html
@@ -3,58 +3,115 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="author" content="Snehamoy Bag">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <script type="module" src="js/index.js"></script>
   
   <title>Frontend Mentor | News homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
+  <header class="header">
+    <div class="container">
+      <img class="header__logo" src="/assets/images/logo.svg" alt="Site Logo">
+      <button class="btn__hamburger" aria-controls="primary-nav" aria-expanded="false">
+        <span class="sr-only">Menu</span>
+        <span class="btn__hamburger-lines"></span>
+      </button>
+      <nav class="header__nav" id="primary-nav" aria-label="Primary Navigation">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Popular</a></li>
+          <li><a href="#">Trending</a></li>
+          <li><a href="#">Categories</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main class="main">
+    <div class="container">
+      <section class="featured">
+        <article class="featured__article">
+          <picture class="featured__cover-img" aria-label="Article Cover">
+            <source srcset="/assets/images/image-web-3-desktop.jpg" media="(min-width: 45em)"></source>
+            <img src="/assets/images/image-web-3-mobile.jpg" alt="">
+          </picture>
+          <h1 class="featured__title">The Bright Future of Web 3.0?</h1>
+          <div class="featured__description">
+            <p>
+              We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+              But is it really fulfilling its promise?
+            </p>
+            <a class="btn__read-more" href="#">Read more</a>
+          </div>
+        </article>
+      </section>
+      <section class="new">
+        <h2 class="new__title">New</h2>
+        <ul class="new__list">
+          <li>
+            <article>
+              <h3 class="new__list-title">Hydrogen VS Electric Cars</h3>
+              <p class="new__list-paragraph">Will hydrogen-fueled cars ever catch up to EVs?</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 class="new__list-title">The Downsides of AI Artistry</h3>
+              <p class="new__list-paragraph">What are the possible adverse effects of on-demand AI image generation?</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 class="new__list-title">Is VC Funding Drying Up?</h3>
+              <p class="new__list-paragraph">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section class="trending">
+        <h2 class="sr-only">Trending Articles</h2>
+        <ol class="trending__list">
+          <li>
+            <article>
+              <img class="trending__thumbnail" src="/assets/images/image-retro-pcs.jpg" alt="">
+              <div class="trending__txt-content">
+                <h3 class="trending__list-title">Reviving Retro PCs</h3>
+                <p class="trending__list-paragraph">What happens when old PCs are given modern upgrades?</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img class="trending__thumbnail" src="/assets/images/image-top-laptops.jpg" alt="">
+              <div class="trending__txt-content">
+                <h3 class="trending__list-title">Top 10 Laptops of 2022</h3>
+                <p class="trending__list-paragraph">Our best picks for various needs and budgets.</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img class="trending__thumbnail" src="/assets/images/image-gaming-growth.jpg" alt="">
+              <div class="trending__txt-content">
+                <h3 class="trending__list-title">The Growth of Gaming</h3>
+                <p class="trending__list-paragraph">How the pandemic has sparked fresh opportunities.</p>
+              </div>
+            </article>
+          </li>
+        </ol>
+      </section>
+    </div>
+  </main>
+  
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
