--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,15 @@
   <meta name="author" content="Snehamoy Bag">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <script type="module" src="js/index.js"></script>
-  
+
   <title>Frontend Mentor | News homepage</title>
 </head>
 <body>
   <header class="header">
     <div class="container">
-      <img class="header__logo" src="/assets/images/logo.svg" alt="Site Logo">
+      <a href="http://localhost:5173/">
+        <img class="header__logo" src="/assets/images/logo.svg" alt="Site Logo">
+      </a>
       <button class="btn__hamburger" aria-controls="primary-nav" aria-expanded="false">
         <span class="sr-only">Menu</span>
         <span class="btn__hamburger-lines"></span>
@@ -28,7 +30,7 @@
       </nav>
     </div>
   </header>
-  
+
   <main class="main">
     <div class="container">
       <section class="featured">
@@ -40,7 +42,7 @@
           <h1 class="featured__title">The Bright Future of Web 3.0?</h1>
           <div class="featured__description">
             <p>
-              We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+              We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
               But is it really fulfilling its promise?
             </p>
             <a class="btn__read-more" href="#">Read more</a>
@@ -53,19 +55,25 @@
           <li>
             <article>
               <h3 class="new__list-title">Hydrogen VS Electric Cars</h3>
-              <p class="new__list-paragraph">Will hydrogen-fueled cars ever catch up to EVs?</p>
+              <p class="new__list-paragraph">
+                Will hydrogen-fueled cars ever catch up to EVs?
+              </p>
             </article>
           </li>
           <li>
             <article>
               <h3 class="new__list-title">The Downsides of AI Artistry</h3>
-              <p class="new__list-paragraph">What are the possible adverse effects of on-demand AI image generation?</p>
+              <p class="new__list-paragraph">
+                What are the possible adverse effects of on-demand AI image generation?
+              </p>
             </article>
           </li>
           <li>
             <article>
               <h3 class="new__list-title">Is VC Funding Drying Up?</h3>
-              <p class="new__list-paragraph">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+              <p class="new__list-paragraph">
+                Private funding by VC firms is down 50% YOY. We take a look at what that means.
+              </p>
             </article>
           </li>
         </ul>
@@ -78,7 +86,9 @@
               <img class="trending__thumbnail" src="/assets/images/image-retro-pcs.jpg" alt="">
               <div class="trending__txt-content">
                 <h3 class="trending__list-title">Reviving Retro PCs</h3>
-                <p class="trending__list-paragraph">What happens when old PCs are given modern upgrades?</p>
+                <p class="trending__list-paragraph">
+                  What happens when old PCs are given modern upgrades?
+                </p>
               </div>
             </article>
           </li>
@@ -87,7 +97,9 @@
               <img class="trending__thumbnail" src="/assets/images/image-top-laptops.jpg" alt="">
               <div class="trending__txt-content">
                 <h3 class="trending__list-title">Top 10 Laptops of 2022</h3>
-                <p class="trending__list-paragraph">Our best picks for various needs and budgets.</p>
+                <p class="trending__list-paragraph">
+                  Our best picks for various needs and budgets.
+                </p>
               </div>
             </article>
           </li>
@@ -96,7 +108,9 @@
               <img class="trending__thumbnail" src="/assets/images/image-gaming-growth.jpg" alt="">
               <div class="trending__txt-content">
                 <h3 class="trending__list-title">The Growth of Gaming</h3>
-                <p class="trending__list-paragraph">How the pandemic has sparked fresh opportunities.</p>
+                <p class="trending__list-paragraph">
+                  How the pandemic has sparked fresh opportunities.
+                </p>
               </div>
             </article>
           </li>
@@ -104,12 +118,12 @@
       </section>
     </div>
   </main>
-  
+
   <footer class="footer">
     <div class="container">
       <div class="footer__attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Snehamoy Bag</a>.
       </div>
     </div>
   </footer>
