--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <meta name="author" content="Snehamoy Bag">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <script type="module" src="js/index.js"></script>
-
   <title>Frontend Mentor | News homepage</title>
+  <script type="module" src="js/index.js"></script>
 </head>
 <body>
   <header class="header">
@@ -22,9 +21,9 @@
       <nav class="header__nav" id="primary-nav" aria-label="Primary Navigation">
         <ul class="header__nav-links">
           <li><a href="#">Home</a></li>
-          <li><a href="#">New</a></li>
-          <li><a href="#">Popular</a></li>
-          <li><a href="#">Trending</a></li>
+          <li><a href="#new">New</a></li>
+          <li><a href="#trending">Popular</a></li>
+          <li><a href="#trending">Trending</a></li>
           <li><a href="#">Categories</a></li>
         </ul>
       </nav>
@@ -33,28 +32,32 @@
 
   <main class="main">
     <div class="container grid grid--triple-col">
-      <section class="featured">
+      <section class="featured" id="featured">
         <article class="featured__article">
           <picture class="featured__cover-img" aria-label="Article Cover">
             <source srcset="/assets/images/image-web-3-desktop.jpg" media="(min-width: 45em)"></source>
             <img src="/assets/images/image-web-3-mobile.jpg" alt="">
           </picture>
           <h1 class="featured__title">The Bright Future of Web 3.0?</h1>
-          <div class="featured__description">
-            <p>
+          <div class="featured__description-wrapper">
+            <p class="featured__description">
               We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
               But is it really fulfilling its promise?
             </p>
-            <a class="btn__read-more" href="#">Read more</a>
+            <a class="btn btn__read-more" href="#featured">Read more</a>
           </div>
         </article>
       </section>
-      <section class="new">
+      <section class="new" id="new">
         <h2 class="new__title">New</h2>
         <ul class="new__list">
           <li>
             <article>
-              <h3 class="new__list-title">Hydrogen VS Electric Cars</h3>
+              <h3 class="new__list-title">
+                <a href="#new">
+                  Hydrogen VS Electric Cars
+                </a>
+              </h3>
               <p class="new__list-paragraph">
                 Will hydrogen-fueled cars ever catch up to EVs?
               </p>
@@ -62,7 +65,11 @@
           </li>
           <li>
             <article>
-              <h3 class="new__list-title">The Downsides of AI Artistry</h3>
+              <h3 class="new__list-title">
+                <a href="#new">
+                  The Downsides of AI Artistry
+                </a>
+              </h3>
               <p class="new__list-paragraph">
                 What are the possible adverse effects of on-demand AI image generation?
               </p>
@@ -70,7 +77,11 @@
           </li>
           <li>
             <article>
-              <h3 class="new__list-title">Is VC Funding Drying Up?</h3>
+              <h3 class="new__list-title">
+                <a href="#new">
+                  Is VC Funding Drying Up?
+                </a>
+              </h3>
               <p class="new__list-paragraph">
                 Private funding by VC firms is down 50% YOY. We take a look at what that means.
               </p>
@@ -78,14 +89,18 @@
           </li>
         </ul>
       </section>
-      <section class="trending">
+      <section class="trending" id="trending">
         <h2 class="sr-only">Trending Articles</h2>
-        <ol class="trending__list">
+        <ol class="trending__list | grid grid--triple-col">
           <li>
             <article>
-              <img class="trending__thumbnail" src="/assets/images/image-retro-pcs.jpg" alt="">
+              <img class="trending__list-thumbnail" src="/assets/images/image-retro-pcs.jpg" alt="">
               <div class="trending__txt-content">
-                <h3 class="trending__list-title">Reviving Retro PCs</h3>
+                <h3 class="trending__list-title">
+                  <a href="#trending">
+                    Reviving Retro PCs
+                  </a>
+                </h3>
                 <p class="trending__list-paragraph">
                   What happens when old PCs are given modern upgrades?
                 </p>
@@ -94,9 +109,13 @@
           </li>
           <li>
             <article>
-              <img class="trending__thumbnail" src="/assets/images/image-top-laptops.jpg" alt="">
+              <img class="trending__list-thumbnail" src="/assets/images/image-top-laptops.jpg" alt="">
               <div class="trending__txt-content">
-                <h3 class="trending__list-title">Top 10 Laptops of 2022</h3>
+                <h3 class="trending__list-title">
+                  <a href="#trending">
+                    Top 10 Laptops of 2022
+                  </a>
+                </h3>
                 <p class="trending__list-paragraph">
                   Our best picks for various needs and budgets.
                 </p>
@@ -105,9 +124,13 @@
           </li>
           <li>
             <article>
-              <img class="trending__thumbnail" src="/assets/images/image-gaming-growth.jpg" alt="">
+              <img class="trending__list-thumbnail" src="/assets/images/image-gaming-growth.jpg" alt="">
               <div class="trending__txt-content">
-                <h3 class="trending__list-title">The Growth of Gaming</h3>
+                <h3 class="trending__list-title">
+                  <a href="#trending">
+                    The Growth of Gaming
+                  </a>
+                </h3>
                 <p class="trending__list-paragraph">
                   How the pandemic has sparked fresh opportunities.
                 </p>
@@ -122,8 +145,8 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Snehamoy Bag</a>.
+        <span>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</span>
+        <span>Coded by <a href="https://www.frontendmentor.io/profile/snehamoybag" target="_blank">Snehamoy Bag</a>.</span>
       </div>
     </div>
   </footer>
