do desktop layout

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,9 @@
   <main class="main">
     <div class="container grid grid--triple-col">
       <section class="featured" id="featured">
-        <article class="featured__article">
+        <article class="featured__article | grid grid--double-col">
           <picture class="featured__cover-img" aria-label="Article Cover">
-            <source srcset="/assets/images/image-web-3-desktop.jpg" media="(min-width: 45em)"></source>
+            <source srcset="/assets/images/image-web-3-desktop.jpg" media="(min-width: 64em)"></source>
             <img src="/assets/images/image-web-3-mobile.jpg" alt="">
           </picture>
           <h1 class="featured__title">The Bright Future of Web 3.0?</h1>
