style trending list

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
           <li>
             <article>
               <img class="trending__list-thumbnail" src="/assets/images/image-retro-pcs.jpg" alt="">
-              <div class="trending__txt-content">
+              <div class="trending__txt-content trending__num trending__num--1">
                 <h3 class="trending__list-title">
                   <a href="#trending">
                     Reviving Retro PCs
@@ -110,7 +110,7 @@
           <li>
             <article>
               <img class="trending__list-thumbnail" src="/assets/images/image-top-laptops.jpg" alt="">
-              <div class="trending__txt-content">
+              <div class="trending__txt-content trending__num trending__num--2">
                 <h3 class="trending__list-title">
                   <a href="#trending">
                     Top 10 Laptops of 2022
@@ -125,7 +125,7 @@
           <li>
             <article>
               <img class="trending__list-thumbnail" src="/assets/images/image-gaming-growth.jpg" alt="">
-              <div class="trending__txt-content">
+              <div class="trending__txt-content trending__num trending__num--3">
                 <h3 class="trending__list-title">
                   <a href="#trending">
                     The Growth of Gaming
