do hamburger menu

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,10 @@
       <a href="http://localhost:5173/">
         <img class="header__logo" src="/assets/images/logo.svg" alt="Site Logo">
       </a>
-      <button class="btn btn__hamburger" aria-controls="primary-nav" aria-expanded="false">
+      <button class="btn btn__hamburger" id="nav-btn" aria-controls="nav-bar" aria-expanded="false">
         <span class="sr-only">Menu</span>
-        <span class="btn__hamburger-lines"></span>
       </button>
-      <nav class="header__nav" id="primary-nav" aria-label="Primary Navigation">
+      <nav class="header__nav" id="nav-bar" aria-label="Primary Navigation">
         <ul class="header__nav-links">
           <li><a href="#">Home</a></li>
           <li><a href="#new">New</a></li>
