style navbar targeted elms

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="container flex flex--space-between flex--align-center">
-      <a href="http://localhost:5173/">
+      <a href="#">
         <img class="header__logo" src="/assets/images/logo.svg" alt="Site Logo">
       </a>
       <button class="btn btn__hamburger" id="nav-btn" aria-controls="nav-bar" aria-expanded="false">
@@ -21,7 +21,7 @@
         <ul class="header__nav-links">
           <li><a href="#">Home</a></li>
           <li><a href="#new">New</a></li>
-          <li><a href="#trending">Popular</a></li>
+          <li><a href="#featured">Popular</a></li>
           <li><a href="#trending">Trending</a></li>
           <li><a href="#">Categories</a></li>
         </ul>
